--- a/v2.md
+++ b/v2.md
@@ -2,8 +2,8 @@
 
 | V 用户中心 | 点击获取👇 | 服务 | 状态 |
 | :----: | :----: | :----: | :----: |
-| 临时1 | [点我跳转1](http://v2.d7fly.xyz) | 正常 | 可用 |
-| 临时2 | [点我跳转2](http://v2.d7fly.xyz) | 正常 | 可用 |
+| 临时1 | [点我跳转1](http://v2.77wall.xyz) | 正常 | 可用 |
+| 临时2 | [点我跳转2](http://v2.dkwall.xyz) | 正常 | 可用 |
 
 ### 说明
 
