--- a/v2.md
+++ b/v2.md
@@ -1,9 +1,9 @@
 # 防走丢 D7 Networks
 
-| V 用户中心 | 点击获取👇 | 服务 | 状态 |
+| 用户中心 | 点击获取👇 | 服务 | 状态 |
 | :----: | :----: | :----: | :----: |
-| 临时1 | [点我跳转1](http://v2.77wall.xyz) | 正常 | 可用 |
-| 临时2 | [点我跳转2](http://v2.dkwall.xyz) | 正常 | 可用 |
+| V2后台1 | [- V2用户中心 -](http://v2.d7hall.xyz) | 正常 | 强烈推荐！ |
+| V2后台2 | [- V2用户中心 -](http://v2.d7ball.xyz) | 正常 | 强烈推荐！ |
 
 ### 说明
 
