--- a/v2.md
+++ b/v2.md
@@ -1,20 +1,16 @@
 # 防走丢 D7 Networks
 
-| 用户中心 | 点击获取👇 | 服务 | 状态 |
-| :----: | :----: | :----: | :----: |
-| V2后台1 | [- V2用户中心 -](http://v2.d7hall.xyz) | 正常 | 强烈推荐！ |
-| V2后台2 | [- V2用户中心 -](http://v2.d7ball.xyz) | 正常 | 强烈推荐！ |
+#### 💗永久域名：[D7net.com](http://d7net.com)（已被墙，需要开启全局代理访问。）
 
 ### 说明
 
 > 1. 因众所周知的原因，我们的域名经常被墙。
 > 2. 这不会影响服务质量，只会给找不到路的朋友造成困扰。
-> 3. 上面表格会持续更新临时地址，防走丢请收藏本链接👇
-> 4. https://github.com/five5mu/d7networks/blob/v2/v2.md
+> 3. 建议老用户牢记永久域名，然后每次续费提前几天。
 
 ### 旗下品牌
 > 墙外科技 | Secure Private Network
 
 > 佛跳墙 - 呐，做人呢，最重要的就是开心。
 
-> 红杏SS - 春色满园关不住，一枝红杏出墙来。
+> 红杏 - 春色满园关不住，一枝红杏出墙来。
